--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 h4 {
@@ -31,18 +31,18 @@ p {
 }
 
 #about {
-  height: 400px;
+  height: 500px;
 }
 
 #contact {
-  height:600px;
+  height:350px;
 }
 
 /*****Base Styles*****/
 
 /*****Grid*****/
 .full-width {
-  width: 1200px;
+  width: 1600px;
   margin 0 auto;
   overflow:auto;
 }
@@ -52,10 +52,6 @@ p {
   float:left;
 }
 
-.third-width {
-  width: 400px;
-  float: left;
-}
 
 /*****Grid*****/
 
@@ -82,9 +78,9 @@ header h1 a {
 }
 
 nav {
-  float: right;
+  float: center;
   padding: 75px 25px;
-  overflow: hidden;
+  overflow:visible;
 }
 
 nav ul li {
@@ -107,28 +103,30 @@ nav ul li a {
   background:url('../img/cowork.jpg');
   background-size: cover;
   background-position:center;
+  overflow: hidden;
 }
 
 #about .full-width {
-    padding: 30px 0;
+    padding: 80px 0;
 }
 
 #about h2 {
-  padding-left: 80px;
+  padding-left: 140px;
+  padding-top: 25px;
   font-family: 'Rock Salt', cursive;
   color: #A4969B;
 }
 
 #about p {
-padding-left: 80px;
+padding-left: 120px;
 text-align: justify;
 line-height: 25px;
 }
 
 #about img {
-    padding: 30px 40px;
+    padding: 30px 100px;
     width:350px;
-    float: right;
+    float: left;
     overflow: hidden;
 }
 
@@ -141,39 +139,34 @@ line-height: 25px;
 }
 
 #contact .full-width {
-    padding: 110px 0;
+    padding: 60px 0;
 }
 
 #contact img#contact-hand {
     width: 350px;
-    margin-left: 55px;
+    margin-left: 85px;
     border: 8px solid #ffffff;
 }
 
-#contact #contact-info {
-    font-weight: 400;
-    line-height:24px;
-    margin: 30px 0 5px 0;
+#contact .contact-info {
+    line-height:44px;
+    margin: 5px 0 5px 0;
 }
 
-#contact h2, h3 {
+#contact h2 {
   font-family: 'Rock Salt', cursive;
   color: #A4969B;
   text-align: left;
-  padding-left: 160px;
-  line-height: 54px;
+  padding-left: 130px;
+  line-height: 34px;
   margin: 10px 0;
 }
 
-#contact #envelope {
-  padding: 0 10px 0 115px;
-}
-
-
-#contact #tagline {
-    font-weight: 400;
-    line-height:44px;
-    margin: 40px 0 0 0;
+#contact p {
+  float: left;
+  padding-left: 100px;
+  margin: 0 auto;
+  line-height: 30px;
 }
 
 #contact a {
@@ -183,12 +176,26 @@ line-height: 25px;
   font-weight: bold;
 }
 
+#contact #phone {
+  float: left;
+}
+
+#contact h3 {
+  font-family: 'Rock Salt', cursive;
+  color: #A4969B;
+  text-align: left;
+  font-weight: 400;
+  padding: 70px 0 0 70px;
+}
+
 #contact ul {
   list-style: none;
+  padding-left: 130px;
 }
 
 #contact ul li {
   display: inline-flex;
+
 }
 
 #contact ul img {
@@ -196,10 +203,6 @@ line-height: 25px;
   padding-right: 35px;
 }
 
-#contact p {
-  float: left;
-  display: inline;
-}
 /****Body****/
 
 /****Footer****/
